# src/Core/Models/TransactionCost.ts
@@ -1,0 +1,5 @@
+export default interface TransactionCost{
+    slowCost : number,
+    averageCost : number,
+    fastCost : number
+}
